# Athar

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
athar/: __main__.py  canonical_ids.py  canonical_serializer.py  canonical_values.py  cli.py  determinism.py  diff_engine.py  diff_engine_changes.py  diff_engine_context.py  diff_engine_markers.py  diff_engine_stats.py  diff_engine_streaming.py  differ.py  engine.py  folder.py  geometry_policy.py  graph_cache.py  graph_parser.py  identity_pipeline.py  matcher_assignment.py  matcher_graph.py  matcher_graph_scoring.py  matcher_policy.py  parser.py  profile_policy.py  report.py  root_remap.py  semantic_signature.py  similarity_seed.py  structural_hash.py  text_fingerprint.py  types.py  wl_refinement.py
athar_layers/: AGENTS.md  cli.py  folder.py  placement.py  report.py  scene.py
docs/: DETAILS.md  LOW_LEVEL_CONTRACT.md  SAMPLE_REPORT.md  sample-report.md
real-world-test/: Building-Landscaping-v1.ifc  Building-Landscaping-v2.ifc  Building-Landscaping-v3.ifc  adv proj changed.ifc
scripts/: __init__.py  diff_folder.py  generate_house_versions.py  generate_sample_report.py  inspect_guid_overlap.py  inspect_ifc.py  inspect_ifc_identity.py  make_modified_ifc.py
tests/: conftest.py  test_benchmark_diff_engine_script.py  test_bottom_regressions.py  test_canonical_ids.py  test_canonical_serializer.py  test_canonical_values.py  test_cli_engine.py  test_determinism_fixtures.py  test_diff.py  test_diff_engine.py  test_diff_engine_files.py  test_diff_engine_markers.py  test_diff_engine_streaming.py  (+30 more)
(+110 files in other folders)
